# senior-design

game-imu-data-analysis/: .gitignore  AGENTS.md  README.md  pyproject.toml
game-imu-data-analysis/data/processed/clean_games_caleb/: Game2CalebPhone_clean.csv
game-imu-data-analysis/data/processed/final_report/: overall_experiment_report.md
game-imu-data-analysis/data/processed/motor_requirements/: motor_requirement_summary.csv  motor_requirement_summary.json
game-imu-data-analysis/data/processed/second_dataset_report/: analysis_assumptions.json  caleb_window_manifest.csv  second_dataset_report.md  second_dataset_summary.csv  second_dataset_summary.json
game-imu-data-analysis/scripts/: align_gravity_frame.py  explore_games.py  inspect_dataset.py  plot_acceleration_profiles.py  plot_filter_clip_comparison.py  plot_xyz_window.py  process_games.py  run_battery_sizing.py  run_motor_requirement_analysis.py  run_second_dataset_report.py
game-imu-data-analysis/src/imu_pipeline/: __init__.py  battery_sizing.py  io.py  schema.py
game-imu-data-analysis/src/imu_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
game-imu-data-analysis/tests/: test_battery_sizing.py  test_io.py
motor-selection/: Kraken X60_raw.xlsx  analyze_motor.py  readme.md
motor-selection/data/: Kraken X60.csv  system.csv
motor-selection/output/: motor_analysis.csv  summary.csv  summary.json  system_analysis.csv
