[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imu-pipeline"
version = "0.1.0"
description = "Utilities for processing large volumes of phone IMU data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29",
  "pytest>=8.0",
  "ruff>=0.3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
